# OOP-project

./: Abonament.cpp  Abonament.h  AbonamentPremium.cpp  AbonamentPremium.h  Abonat.cpp  Abonat.h  AbonatRepository.cpp  AbonatRepository.h  Biblioteca.cpp  Biblioteca.h  CMakeLists.txt  Carte.cpp  Carte.h  Meniu.cpp  Meniu.h  Persoana.cpp  Persoana.h  README.md  Repository.h  main.cpp
