cmake_minimum_required(VERSION 3.21)
project(proiect3)

set(CMAKE_CXX_STANDARD 14)

add_executable(proiect3 main.cpp Meniu.h Meniu.cpp Biblioteca.h Biblioteca.cpp Persoana.cpp Persoana.h Abonat.cpp Abonat.h Abonament.cpp Abonament.h AbonamentPremium.cpp AbonamentPremium.h Repository.h Repository.cpp AbonatRepository.cpp AbonatRepository.h Carte.cpp Carte.h)
